# Homework_Module_13_PythonWEB

./: .gitignore  README.md
hw_13/: Umova.txt  main.py  pyproject.toml
hw_13 Django/: pyproject.toml  umova.txt
hw_13 Django/hw_project/: .env example
hw_13 Django/hw_project/hw_project/: settings.py  urls.py
hw_13 Django/hw_project/quotes/: models.py  urls.py  views.py
hw_13 Django/hw_project/quotes/migrations/: 0001_initial.py  0002_alter_author_fullname.py
hw_13 Django/hw_project/quotes/static/quotes/: style.css
hw_13 Django/hw_project/quotes/templates/author/: author_confirm_delete.html  author_create.html  author_page.html  quote_page.html
hw_13 Django/hw_project/quotes/templates/quotes/: base.html  index.html
hw_13 Django/hw_project/quotes/templatetags/: extract.py
hw_13 Django/hw_project/users/: forms.py  views.py
hw_13 Django/hw_project/users/templates/users/: login.html  signup.html
hw_13 Django/hw_project/utils/: authors.json  migration.py
hw_13/postgres-data/base/16384/: 16394  pg_internal.init
hw_13/postgres-data/base/5/: pg_internal.init
hw_13/postgres-data/global/: pg_control  pg_internal.init
hw_13/postgres-data/pg_stat/: pgstat.stat
hw_13/src/repository/: contacts.py  users.py
hw_13/src/routes/: auth.py  contacts.py  users.py
hw_13/src/services/: auth.py  email.py
